--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
-    "next": "15.2.3",
+    "next": "^16.1.1",
     "radix-ui": "^1.4.2",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.56.4",
     "react-toastify": "^11.0.5",
